--- a/public/main.html
+++ b/public/main.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html ng-app='ContactsApp'>
     <head>
         <title>Contacts</title>
         <base href='/'>
@@ -8,10 +8,12 @@
     <body>
         <div class='container'>
             <div class='page-header'>
-                <h1>Contacts</h1>
+                <h1>Contacts {{message}}</h1>
             </div>
         </div>
         <script type='text/javascript' src='components/jquery/dist/jquery.min.js'></script>
         <script type='text/javascript' src='components/bootstrap/dist/js/bootstrap.min.js'></script>
+        <script type='text/javascript' src='components/angular/angular.min.js'></script>
+        <script type='text/javascript' src='src/app.js'></script>
     </body>
 </html>
