--- a/public/main.html
+++ b/public/main.html
@@ -8,12 +8,17 @@
     <body>
         <div class='container'>
             <div class='page-header'>
-                <h1>Contacts {{message}}</h1>
+                <h1>Contacts</h1>
+            </div>
+            <div class='row'>
+                <div class='col-sm-12' ng-view></div>
             </div>
         </div>
         <script type='text/javascript' src='components/jquery/dist/jquery.min.js'></script>
         <script type='text/javascript' src='components/bootstrap/dist/js/bootstrap.min.js'></script>
         <script type='text/javascript' src='components/angular/angular.min.js'></script>
+        <script type='text/javascript' src='components/angular-route/angular-route.min.js'></script>
         <script type='text/javascript' src='src/app.js'></script>
+        <script type='text/javascript' src='src/controllers.js'></script>
     </body>
 </html>
