add angular resource

--- a/public/main.html
+++ b/public/main.html
@@ -18,6 +18,7 @@
         <script type='text/javascript' src='components/bootstrap/dist/js/bootstrap.min.js'></script>
         <script type='text/javascript' src='components/angular/angular.min.js'></script>
         <script type='text/javascript' src='components/angular-route/angular-route.min.js'></script>
+        <script type='text/javascript' src='components/angular-resouce/angular-resource.min.js'></script>
         <script type='text/javascript' src='src/app.js'></script>
         <script type='text/javascript' src='src/controllers.js'></script>
     </body>
